main/default/objects/LoopQualOpportunityTemplate__c/LoopQualOpportunityTemplate__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LoopQualOpportunityTemplate</label>
</CustomObject>