main/default/objects/LoopQualOpportunityTemplate__c/fields/ForecastCategory__c.field-meta.xml
<CustomField>
    <fullName>ForecastCategory__c</fullName>
    <description>Template value for loop qual opportunity generation</description>
    <label>ForecastCategory</label>
    <length>128</length>
    <type>Text</type>
</CustomField>