main/default/objects/LoopQualOpportunityTemplate__c/fields/OpportunityType__c.field-meta.xml
<CustomField>
    <fullName>OpportunityType__c</fullName>
    <description>Template value for loop qual opportunity generation</description>
    <inlineHelpText>Template value for loop qual opportunity generation</inlineHelpText>
    <label>OpportunityType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>